fixing some spacings

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ html, body {
 }
 
 .face {
-  max-height: 200px;
+  max-height: 300px;
 }
 
 .sites {
@@ -67,14 +67,10 @@ html, body {
 }
 
 .me {
-  position: absolute;
-  color: #e7e7e7;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
   width: 100%;
-  background: transparent;
+  height: 100%;
+  text-align: center;
+  padding-top: 100px;
 }
 
 .mich {
@@ -208,6 +204,7 @@ a {
   width: 50%;
   height: 200px;
   line-height: 200px;
+  font-size: .7em;
 }
 
 .full {
@@ -220,9 +217,14 @@ a {
 }
 
 .sites {
-  margin-top: 40px;
+  margin-top: 60px;
+  max-height: 250px;
 }
 
 .ss-icon {
   font-size: 1em;
+}
+
+.me {
+  padding-top: 50px;
 }
